--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-BYBIT_API_KEY=aXHNPUtB5PGdkFrh8Q
-BYBIT_API_SECRET=GPGiwJ1folJ9AJrq7YFcP7EYAHuza7EtXvIH
+BYBIT_API_KEY=
+BYBIT_API_SECRET=
+NEXT_PUBLIC_APP_URL="http://localhost:9002"
