--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 BYBIT_API_KEY=
 BYBIT_API_SECRET=
 NEXT_PUBLIC_APP_URL="http://localhost:9002"
-GEMINI_API_KEY=
+GEMINI_API_KEY=AIzaSyCbY5hBJuoxR1qDdYB-84YnZ0xTtW7cHq0
